# embedded-live-programming

./: CHANGELOG.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts  start.sh
.github/: dependabot.yml
.run/: Run Plugin.run.xml
backend/: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
backend/include/: arduino.h  debug_util.h  jni_util.h  probe.h  runner.h  types.h  user_code.h
backend/src/: arduino.cpp  runner.cpp  serial.cc  test.cpp
plugin/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts  start.sh
plugin/src/main/resources/fileTemplates/: Component.h.ft
plugin/src/main/resources/fileTemplatess/: Component.h.ftt
rpc/: rpc.ino
src/main/kotlin/com/elp/: ELPIcons.kt  ExampleService.kt  FileAnalyzer.kt  FileChangeListener.kt  FileOpenListener.kt  HITLWidget.kt  IntellijExt.kt  Probe.kt  ProbeInlayProvider.kt  ProbePresentation.kt  ProbeService.kt  ProbeUpdateController.kt  ReplacementAction.kt  ReplacementBallon.kt  Runner.kt  SparklineProbe.kt  SwingExt.kt
src/main/kotlin/com/elp/actions/: CreateClassReplacementAction.kt  (+7 more)
template/: .gitignore  CMakeLists.txt  README.md
template/include/: State.h  code.h  motor.h  motors.h  pin.h  run.cpp
template/src/: ButtonState.h  DriveState.h  HomeState.h  Main.h  ReturnState.h  Test.cpp  Test.h  Training.h  run.cpp
user-code-wrapper/: .gitignore  CMakeLists.txt  CMakeListsAddition.txt  README.md  build.sh
user-code-wrapper/include/: arduino.h  code.h  interface.tcc
user-code-wrapper/src/: arduino.cc  code.cc  interface.cc
(+122 files in other folders)
